--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@tailwindcss/vite": "^4.0.14",
     "@types/react": "^19.0.11",
     "@types/react-dom": "^19.0.4",
-    "astro": "^4.5.3",
+    "astro": "^5.5.3",
     "daisyui": "^5.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.14"
+  },
+  "devDependencies": {
+    "tailwindcss-animated": "^2.0.0"
   }
 }
