--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "daisyui": "^5.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
