--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "cpacademy",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -9,12 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^9.2.1",
     "@astrojs/react": "^4.2.1",
     "@sendgrid/mail": "^8.1.4",
     "@tailwindcss/vite": "^4.0.14",
     "@types/react": "^19.0.11",
     "@types/react-dom": "^19.0.4",
-    "astro": "^5.5.3",
+    "astro": "^5.7.11",
     "daisyui": "^5.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
