--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,42 +1,44 @@
-name: Deploy to VPS with Compose
+name: Deploy
 
 on:
-  workflow_dispatch:
+  push:
+    branches: [main]
 
 jobs:
-  build-and-deploy:
+  build-and-push:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - name: Log in to DockerHub
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push Docker image
+      - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/cpacademy:latest
 
-      - name: SSH to VPS and deploy with Docker Compose
+  deploy:
+    needs: build-and-push
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to server
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
+          port: 22
           script: |
             cd ~/cpacademy || mkdir ~/cpacademy && cd ~/cpacademy
-
             # Créer/mettre à jour docker-compose.yml
             cat > docker-compose.yml <<EOF
             version: '3.8'
-
             services:
               cpacademy:
                 image: ${{ secrets.DOCKERHUB_USERNAME }}/cpacademy:latest
@@ -45,7 +47,6 @@ jobs:
                   - "3000:80"
                 restart: unless-stopped
             EOF
-
             docker compose down
             docker compose pull
             docker compose up -d
