--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,8 @@ server {
     listen 80;
     server_name _;
 
-    root /usr/share/nginx/html;
+    # Point vers le dossier client où se trouvent vos fichiers statiques
+    root /usr/share/nginx/html/client;
     index index.html;
 
     # Compression
@@ -11,6 +12,11 @@ server {
 
     location / {
         try_files $uri $uri/ /index.html;
+    }
+
+    # Pour les fichiers statiques
+    location /assets {
+        alias /usr/share/nginx/html/client/assets;
     }
 
     # Cache control pour les assets statiques
