--- a/nginx.conf
+++ b/nginx.conf
@@ -3,25 +3,29 @@ server {
     server_name _;
 
     # Point vers le dossier client où se trouvent vos fichiers statiques
-    root /usr/share/nginx/html/client;
+    root /usr/share/nginx/html;
     index index.html;
 
     # Compression
     gzip on;
     gzip_types text/plain text/css application/json application/javascript;
 
+    # Règle explicite pour les assets
+    location /assets/ {
+        try_files $uri $uri/ =404;
+    }
+
+    # Réglage pour tous les fichiers statiques
+    location ~* \.(jpg|jpeg|png|gif|ico|svg|webp|js|css)$ {
+        try_files $uri =404;
+    }
+
+    # Pour tout le reste
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # Pour les fichiers statiques
-    location /assets {
-        alias /usr/share/nginx/html/client/assets;
-    }
-
-    # Cache control pour les assets statiques
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-        expires 30d;
-        add_header Cache-Control "public, no-transform";
-    }
+    # Logs
+    error_log /var/log/nginx/error.log debug;
+    access_log /var/log/nginx/access.log;
 }
