--- a/nginx.conf
+++ b/nginx.conf
@@ -10,13 +10,13 @@ server {
     gzip on;
     gzip_types text/plain text/css application/json application/javascript;
 
-    # Règle explicite pour les assets
-    location /assets/ {
-        try_files $uri $uri/ =404;
+    # Règle pour servir les fichiers images depuis assets
+    location ~* \.(jpg|jpeg|png|gif|ico|svg|webp|webm)$ {
+        try_files $uri /assets$uri /assets/$uri =404;
     }
 
     # Réglage pour tous les fichiers statiques
-    location ~* \.(jpg|jpeg|png|gif|ico|svg|webp|js|css)$ {
+    location ~* \.(js|css)$ {
         try_files $uri =404;
     }
 
