--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name _;
+    server_name cpacademy.fr www.cpacademy.fr;
 
     # Point vers le dossier client où se trouvent vos fichiers statiques
     root /usr/share/nginx/html;
@@ -22,7 +22,15 @@ server {
 
     # Pour tout le reste
     location / {
-        try_files $uri $uri/ /index.html;
+        proxy_pass http://localhost:4321;  # Port sur lequel tourne votre application Astro
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # Logs
