--- a/nginx.conf
+++ b/nginx.conf
@@ -22,7 +22,7 @@ server {
 
     # Pour tout le reste
     location / {
-        proxy_pass http://localhost:4321;  # Port sur lequel tourne votre application Astro
+        proxy_pass http://localhost:3000;  # Port où votre conteneur Docker est exposé
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
