--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name cpacademy.fr www.cpacademy.fr;
+    server_name _;
 
     # Point vers le dossier client où se trouvent vos fichiers statiques
     root /usr/share/nginx/html;
@@ -22,15 +22,7 @@ server {
 
     # Pour tout le reste
     location / {
-        proxy_pass http://localhost:3000;  # Port où votre conteneur Docker est exposé
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        try_files $uri $uri/ /index.html;
     }
 
     # Logs
