Ajout de nouvelles configurations de sécurité dans nginx et Astro, y compris HSTS et CSP. Mise à jour du fichier tsconfig pour exclure des répertoires supplémentaires. Ajout d'un fichier de configuration Vercel pour les en-têtes de sécurité. Ajout d'un nouveau fichier SVG pour les assets et amélioration de la structure du composant Navbar avec des sous-menus. Création d'une nouvelle page pour le règlement intérieur.

--- a/.gitignore
+++ b/.gitignore
@@ -17,9 +17,13 @@ pnpm-debug.log*
 .env
 .env.production
 
+.vscode/
 # macOS-specific files
 .DS_Store
 
 # jetbrains setting folder
 .idea/
 package-lock.json
+
+
+/public/assets/
