--- a/nginx.conf
+++ b/nginx.conf
@@ -1,31 +1,62 @@
 server {
     listen 80;
-    server_name _;
+    server_name cpacademy.fr www.cpacademy.fr;
+    
+    # Redirection vers HTTPS
+    return 301 https://$server_name$request_uri;
+}
 
-    # Point vers le dossier client où se trouvent vos fichiers statiques
-    root /usr/share/nginx/html;
-    index index.html;
+server {
+    listen 443 ssl http2;
+    server_name cpacademy.fr www.cpacademy.fr;
+
+    # SSL configuration
+    ssl_certificate /etc/letsencrypt/live/cpacademy.fr/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/cpacademy.fr/privkey.pem;
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:SSL:50m;
+    ssl_session_tickets off;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers off;
+
+    # HSTS
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    
+    # Autres en-têtes de sécurité
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self';" always;
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
 
     # Compression
     gzip on;
-    gzip_types text/plain text/css application/json application/javascript;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css text/xml application/json application/javascript application/xml+rss application/atom+xml image/svg+xml;
 
-    # Règle pour servir les fichiers images depuis assets
-    location ~* \.(jpg|jpeg|png|gif|ico|svg|webp|webm)$ {
-        try_files $uri /assets$uri /assets/$uri =404;
+    # Cache pour les fichiers statiques
+    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|webp)$ {
+        expires 1y;
+        add_header Cache-Control "public, no-transform";
     }
 
-    # Réglage pour tous les fichiers statiques
-    location ~* \.(js|css)$ {
-        try_files $uri =404;
-    }
-
-    # Pour tout le reste
+    # Proxy vers Node.js
     location / {
-        try_files $uri $uri/ /index.html;
+        proxy_pass http://localhost:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # Logs
-    error_log /var/log/nginx/error.log debug;
-    access_log /var/log/nginx/access.log;
+    access_log /var/log/nginx/cpacademy.access.log;
+    error_log /var/log/nginx/cpacademy.error.log;
 }
