--- a/nginx.conf
+++ b/nginx.conf
@@ -1,34 +1,25 @@
 server {
     listen 80;
-    server_name cpacademy.fr www.cpacademy.fr;
+    server_name _;
+
+    # Point vers le dossier client où se trouvent vos fichiers statiques
+    root /usr/share/nginx/html;
+    index index.html;
 
     # Compression
     gzip on;
-    gzip_vary on;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_types text/plain text/css text/xml application/json application/javascript application/xml+rss application/atom+xml image/svg+xml;
+    gzip_types text/plain text/css application/json application/javascript;
 
-    # Cache pour les fichiers statiques
-    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|webp)$ {
-        expires 1y;
-        add_header Cache-Control "public, no-transform";
+    # Règle pour servir les fichiers images depuis assets
+    location ~* \.(jpg|jpeg|png|gif|ico|svg|webp|webm)$ {
+        try_files $uri /assets$uri /assets/$uri =404;
     }
 
-    # Proxy vers Node.js
+    # Réglage pour tous les fichiers statiques
+    location ~* \.(js|css)$ {
+        try_files $uri =404;
+    }
+
+    # Pour tout le reste
     location / {
-        proxy_pass http://localhost:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # Logs
-    access_log /var/log/nginx/cpacademy.access.log;
-    error_log /var/log/nginx/cpacademy.error.log;
-}
+        try_files $uri $uri/ /index.html;
